feat: Report for controller & openapi updated
